Fixed a bug with overflow being visible when it should NOT

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,7 +3,7 @@
 
 body {
   width: 100%;
-  height: auto;
+  height: 100vh;
   overflow: hidden;
 }
 
